--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-stable-version",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Utility function to see if a SemVer version isn't a prerelease.",
   "license": "MIT",
   "repository": "seancroach/is-stable-version",
@@ -16,6 +16,7 @@
     "eslint": "eslint \"**/*.ts\"",
     "format": "npm run prettier:write",
     "lint": "npm run prettier:check && npm run eslint",
+    "prepare": "npm build",
     "prettier:check": "prettier --check \"**\"",
     "prettier:write": "prettier --write \"**\"",
     "test": "npm run lint && npm run ava"
